@@ -1055,59 +1055,11 @@ class Sanitizer {
 	}
 
 	/**
-	 * Given a value, escape it so that it can be used in an id attribute and
-	 * return it.  This will use HTML5 validation, allowing anything but ASCII
-	 * whitespace.
-	 *
-	 * To ensure we don't have to bother escaping anything, we also strip ', ".
-	 * TODO: Is this the best tactic?
-	 *
-	 * We also strip # because it upsets IE, and % because it could be
-	 * ambiguous if it's part of something that looks like a percent escape
-	 * (which don't work reliably in fragments cross-browser).
-	 *
-	 * @deprecated since 1.30, use one of this class' escapeIdFor*() functions
-	 *
-	 * @see https://www.w3.org/TR/html401/types.html#type-name Valid characters
-	 *   in the id and name attributes
-	 * @see https://www.w3.org/TR/html401/struct/links.html#h-12.2.3 Anchors with
-	 *   the id attribute
-	 * @see https://www.w3.org/TR/html5/dom.html#the-id-attribute
-	 *   HTML5 definition of id attribute
-	 *
-	 * @param string $id Id to escape
-	 * @param string|array $options String or array of strings (default is []):
-	 *   'noninitial': This is a non-initial fragment of an id, not a full id,
-	 *       so don't pay attention if the first character isn't valid at the
-	 *       beginning of an id.
-	 * @return string
-	 */
-	public static function escapeId( $id, $options = [] ) {
-		wfDeprecated( __METHOD__, '1.30' );
-		$options = (array)$options;
-
-		// HTML4-style escaping
-		static $replace = [
-			'%3A' => ':',
-			'%' => '.'
-		];
-
-		$id = urlencode( strtr( $id, ' ', '_' ) );
-		$id = strtr( $id, $replace );
-
-		if ( !preg_match( '/^[a-zA-Z]/', $id ) && !in_array( 'noninitial', $options ) ) {
-			// Initial character must be a letter!
-			$id = "x$id";
-		}
-		return $id;
-	}
-
-	/**
 	 * Given a section name or other user-generated or otherwise unsafe string, escapes it to be
 	 * a valid HTML id attribute.
 	 *
-	 * WARNING: unlike escapeId(), the output of this function is not guaranteed to be HTML safe,
-	 * be sure to use proper escaping.
+	 * WARNING: The output of this function is not guaranteed to be HTML safe, so be sure to use
+	 * proper escaping.
 	 *
 	 * @param string $id String to escape
 	 * @param int $mode One of ID_* constants, specifying whether the primary or fallback encoding
@@ -1136,8 +1088,8 @@ class Sanitizer {
 	 * Given a section name or other user-generated or otherwise unsafe string, escapes it to be
 	 * a valid URL fragment.
 	 *
-	 * WARNING: unlike escapeId(), the output of this function is not guaranteed to be HTML safe,
-	 * be sure to use proper escaping.
+	 * WARNING: The output of this function is not guaranteed to be HTML safe, so be sure to use
+	 * proper escaping.
 	 *
 	 * @param string $id String to escape
 	 * @return string Escaped ID
@@ -1209,7 +1161,7 @@ class Sanitizer {
 				$id = str_replace( [ "\t", "\n", "\f", "\r", " " ], '_', $id );
 				break;
 			case 'legacy':
-				// This corresponds to 'noninitial' mode of the old escapeId()
+				// This corresponds to 'noninitial' mode of the former escapeId()
 				static $replace = [
 					'%3A' => ':',
 					'%' => '.'
