@@ -93,6 +93,7 @@ because of Phabricator reports.
   the internal object, use ObjectCache::getLocalClusterInstance instead.
 * CategoryFinder, which was deprecated in 1.31 and hard-deprecated in 1.35,
   has been removed.
+* Sanitizer::escapeId(), deprecated in 1.30, has been removed.
 * The support for IE8 has been dropped.
 * Less mixin `.background-image-svg-quick()` from mediawiki.mixins.less,
   deprecated since 1.35, has been removed.
